분단위 스케줄러 세팅